--- a/templates/login.html
+++ b/templates/login.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <body>
-        <h1>Log in to Blogz!</h1>
+        <h1>Login</h1>
         <hr />
         <div class="main">
         <p>If you don't have an account, you may <a href='/register'>register</a> for one.</p>
