--- a/templates/stock.html
+++ b/templates/stock.html
@@ -6,31 +6,51 @@
 <h1>Games</h1>
 <p><a href='/addgame'>Add a Game to Database</a></p>
 
+{% if order != True %}
+<form method='POST'>
+    <input type='submit' value='Order Games'>
+</form>
+{% else %}
+<form action='/stock' method='POST'>
+    <input type='submit' value='Cancel Order'>
+</form>
+{% endif %}
+
+
 {% if games|length == 0 %}
 <p>No games found.</p>
 {% else %}
-<table>
-    <tr>
-        <th>Id</th>
-        <th>Title</th>
-        <th>Genre</th>
-        <th>Platform</th>
-        <th>Price</th>
-        <th>Stock</th>
-        <th>Amount Sold</th>
-    </tr>
 
-    {% for game in games %}
-    <tr>
-        <td>{{game.id}}</td>
-        <td>{{game.title}}</td>
-        <td>{{game.genre}}</td>
-        <td>{{game.platform}}</td>
-        <td>{{game.price}}</td>
-        <td>{{game.stock}}</td>
-        <td>{{game.amount_sold}}</td>
-    </tr>
-    {% endfor %}
+    <form action='/order' method='POST'>
+    <table>
+        <tr>
+            <th>Id</th>
+            <th>Title</th>
+            <th>Genre</th>
+            <th>Platform</th>
+            <th>Price</th>
+            <th>Stock</th>
+            <th>Amount Sold</th>
+        </tr>
+
+        {% for game in games %}
+        <tr>
+            <td>{{game.id}}</td>
+            <td>{{game.title}}</td>
+            <td>{{game.genre}}</td>
+            <td>{{game.platform}}</td>
+            <td>{{game.price}}</td>
+            <td>{{game.stock}}</td>
+            <td>{{game.amount_sold}}</td>
+            {% if order == True %}
+            <td><input type='number' name={{game.id}} value='{{value}}'></td>
+            {% endif %}
+        </tr>
+        {% endfor %}
+    {% if order == True %}
+    <input type='submit' name='Order'>
+    </form>
+    {% endif %}
 {% endif %}
 
 </table>
